Solve horizontal Scrollbar by edit checkout.html code

--- a/src/css/old-style.css
+++ b/src/css/old-style.css
@@ -1,7 +1,6 @@
 @import './JF-flat.css';
 
 body{
-    overflow: -moz-scrollbars-vertical; overflow-x: hidden; overflow-y: scroll;  
     font-family: 'JF Flat Regular', 'Times New Roman', Times, serif;
 }
 
